[package]
name = "teahttp"
version = "0.2.1"
edition = "2021"
description = "a http client for wasm"
license = "MIT"
repository = "https://github.com/hUwUtao/teahttp"
homepage = "https://github.com/hUwUtao/teahttp"
keywords = ["web", "http", "wasm"]

[lib]
name = "teahttp"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
std = []
default = ["std"]

[[example]]
name = "one"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.70", features = [
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "Window",
    # "Url",
    # "UrlSearchParams",
    "WorkerGlobalScope",
], default-features = false }

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
